Addes some changes, add vars

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="TryAngular">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,10 @@
     <title>Try Angular v1.5.0</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="icon" href="https://cdn.worldvectorlogo.com/logos/angular-icon-1.svg" type="image/gif" sizes="16x16">
+    <link rel="icon" href="https://cdn.worldvectorlogo.com/logos/angular-icon-1.svg" type="image/x-icon">
     <link rel="stylesheet" href="style/css/style.css">
+    <script src="js/app/app.module.js"></script>
+    <script src="js/app/app.config.js"></script>
 
 </head>
 <body>
@@ -26,6 +28,7 @@
       <input type="text" ng-model="input1" placeholder="Insert your text here">
       <input type="text" ng-model="input2" placeholder="Insert your text here">
     </section>
+    <hr>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
