Small changes in styles and index.html

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     </nav>
 
     <section class="container" ng-controller="inputTestCtrl">
+      <h3>Input</h3>
       <p ng-class="{'new-class': input1, 'new-class2' : input2=='more'}">Hello
         <span ng-if="input1">{{input1}}</span>
         <span ng-if="!input1">World!</span>
